--- a/aa/twmpgo.html
+++ b/aa/twmpgo.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 <script>
-	window.location.href= "megabank.mbapp://openapp?system=LineBC&data=HrP7A+11111giscThhSTzO4Qo37TM2zOW7rfIB/D+vhfUv4L9C3jHS+nBCpaOHpnakI5vDPO8VUYs/B1IV+a3Ksd3gg76jplGrEIQNd71";
+	window.location.href= "megabank.mbapp://openapp?system=LineBC&data=Hssdsddf71";
 </script>
 <div ></div>
 <header>    
