--- a/aa/twmpgo.html
+++ b/aa/twmpgo.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 <script>
-	window.location.href= "megabank.mbapp://openapp?system=LineBC&data=Haaaaaaaaaa";
+	window.location.href= "megabank1.mbapp://openapp?system=LineBC&data=Haaaaaaaaaa";
 </script>
 <div ></div>
 <header>    
