--- a/aa/twmpgo.html
+++ b/aa/twmpgo.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 <script>
-	window.location.href= "megabank1.mbapp://openapp?system=LineBC&data=Haaaaaaaaaa";
+	window.location.href= "megabank.mbapp://openapp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUuJ85f1FPdtymDRMNn1vn7/6rjcATgbB2EAPAQ0lhbjNckZRToZfqn+oYja9Cykz1iDnjHdKEd0FS2JROqAAkM/HWzO0RPowGmV1CFv1cpbN";
 </script>
 <div ></div>
 <header>    
